:sparkles: feat: implement numeric methods (Euler y Runge-Kutta)

--- a/notebooks/proyecto-02.ipynb
+++ b/notebooks/proyecto-02.ipynb
@@ -32,8 +32,253 @@
     "\n",
     "Dado que no existe una solución analítica general para este sistema, será necesario utilizar métodos numéricos implementados manualmente en **Python**. Toda la lógica será construida desde cero utilizando únicamente herramientas como **NumPy** y **Matplotlib**.\n",
     "\n",
-    "---\n"
+    "---\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a6cacc3-dbef-436f-8d55-10da05906a5c",
+   "metadata": {},
+   "source": [
+    "# Sistema de Lorenz - Simulaciones\n",
+    "\n",
+    "## 1. Definición del sistema de Lorenz\n",
+    "\n",
+    "El sistema de Lorenz es un conjunto de ecuaciones diferenciales ordinarias no lineales de primer orden, derivado originalmente de un modelo simplificado para estudiar la convección térmica en la atmósfera. Fue propuesto por Edward Lorenz en 1963 y es conocido por su comportamiento caótico bajo ciertas condiciones iniciales y valores de parámetros [1].\n",
+    "\n",
+    "Este sistema modela la evolución temporal de tres variables interdependientes, usualmente representadas como $x(t)$, $y(t)$ y $z(t)$, de acuerdo con el siguiente sistema:\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\dot{x} = \\sigma (y - x) \\\\\n",
+    "\\dot{y} = x(\\rho - z) - y \\\\\n",
+    "\\dot{z} = xy - \\beta z\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "Donde:\n",
+    "\n",
+    "- $\\sigma$: número de Prandtl (relación entre difusión térmica y viscosidad),\n",
+    "- $\\rho$: número de Rayleigh modificado (proporcional a la diferencia de temperatura),\n",
+    "- $\\beta$: parámetro geométrico.\n",
+    "\n",
+    "Cada una de estas ecuaciones describe la tasa de cambio de una variable con respecto al tiempo. El sistema puede escribirse de forma compacta como:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\vec{x}}{dt} = \\vec{F}(\\vec{x}, t)\n",
+    "$$\n",
+    "\n",
+    "donde $\\vec{x}(t) = [x(t), y(t), z(t)]^\\top$ es el vector de estado y $\\vec{F} = [\\dot{x}, \\dot{y}, \\dot{z}]$ representa el **campo vectorial** que define la dinámica del sistema. Esta notación permite interpretar el comportamiento del sistema desde una perspectiva geométrica, facilitando el análisis de propiedades como la **divergencia** y el **rotacional**, fundamentales en el estudio de sistemas dinámicos tridimensionales [2].\n",
+    "\n",
+    "A continuación, se implementa en Python una función que representa el sistema de Lorenz como un campo vectorial a partir de sus ecuaciones definidas.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "56d381f1-591d-47ac-9892-817d5c6fae02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def lorenz_system(state, sigma, rho, beta):\n",
+    "    \"\"\"\n",
+    "    Representación del sistema de Lorenz como campo vectorial.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - state: vector de estado [x, y, z] en el tiempo actual.\n",
+    "    - sigma, rho, beta: parámetros del sistema de Lorenz.\n",
+    "\n",
+    "    Retorna:\n",
+    "    - derivada: vector [dx/dt, dy/dt, dz/dt]\n",
+    "    \"\"\"\n",
+    "    x, y, z = state\n",
+    "    dx = sigma * (y - x)\n",
+    "    dy = x * (rho - z) - y\n",
+    "    dz = x * y - beta * z\n",
+    "    return np.array([dx, dy, dz])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4639745-1611-4f75-baf9-8ac1e108a17f",
+   "metadata": {},
+   "source": [
+    "## 2. Implementación del Método de Euler\n",
+    "\n",
+    "El **método de Euler** es uno de los algoritmos más simples para resolver numéricamente ecuaciones diferenciales ordinarias (EDOs). Consiste en aproximar la solución de una EDO de primer orden utilizando una expansión de **Taylor de primer grado** [3].\n",
+    "\n",
+    "Sea una EDO en forma vectorial:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\vec{x}}{dt} = \\vec{F}(\\vec{x}, t), \\quad \\vec{x}(t_0) = \\vec{x}_0\n",
+    "$$\n",
+    "\n",
+    "donde $\\vec{x}(t)$ representa el vector de estado del sistema en el instante $t$, y $\\vec{F}$ es una función que describe su dinámica.\n",
+    "\n",
+    "La idea principal del método es utilizar el valor actual de la derivada para proyectar la solución hacia adelante en el tiempo. Si se desea calcular una aproximación en el instante $t_{n+1} = t_n + h$, se emplea la expansión de Taylor:\n",
+    "\n",
+    "$$\n",
+    "\\vec{x}(t_{n+1}) = \\vec{x}(t_n) + h \\cdot \\frac{d\\vec{x}}{dt}(t_n) + \\mathcal{O}(h^2)\n",
+    "$$\n",
+    "\n",
+    "Despreciando el término de orden superior $\\mathcal{O}(h^2)$, se obtiene la **fórmula de Euler**:\n",
+    "\n",
+    "$$\n",
+    "\\vec{x}_{n+1} = \\vec{x}_n + h \\cdot \\vec{F}(\\vec{x}_n, t_n)\n",
+    "$$\n",
+    "\n",
+    "donde:\n",
+    "- $\\vec{x}_n$ es la aproximación de la solución en el instante $t_n$,\n",
+    "- $h$ es el tamaño del paso temporal.\n",
+    "\n",
+    "Este procedimiento se repite de forma iterativa para obtener la trayectoria aproximada del sistema entre un tiempo inicial $t_0$ y uno final $t_f$. La calidad de la solución depende fuertemente del tamaño del paso $h$: valores grandes pueden generar errores significativos, mientras que pasos pequeños aumentan la precisión a costa de mayor tiempo de cómputo.\n",
+    "\n",
+    "### Aplicación al sistema de Lorenz\n",
+    "\n",
+    "El sistema de Lorenz, al ser un sistema tridimensional de EDOs no lineales, se adapta directamente al esquema anterior. En este caso, el vector $\\vec{x}$ corresponde a:\n",
+    "\n",
+    "$$\n",
+    "\\vec{x}(t) = [x(t),\\; y(t),\\; z(t)]^\\top\n",
+    "$$\n",
+    "\n",
+    "y el campo vectorial $\\vec{F}$ está definido por las ecuaciones:\n",
+    "\n",
+    "$$\n",
+    "\\vec{F}(\\vec{x}) =\n",
+    "\\begin{bmatrix}\n",
+    "\\sigma (y - x) \\\\\n",
+    "x (\\rho - z) - y \\\\\n",
+    "xy - \\beta z\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "A continuación, se presenta la implementación computacional del método de Euler para sistemas de EDOs de este tipo, de forma general y reutilizable.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a096ce9c-aca6-4b6f-a2cd-1d59b5fcabda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euler_method(f, x0, t0, tf, h, args=()):\n",
+    "    \"\"\"\n",
+    "    Implementación del método de Euler para sistemas de EDOs.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - f: función que define el sistema (e.g., lorenz_system)\n",
+    "    - x0: vector de condiciones iniciales [x0, y0, z0]\n",
+    "    - t0: tiempo inicial\n",
+    "    - tf: tiempo final\n",
+    "    - h: paso de integración\n",
+    "    - args: tupla de parámetros adicionales para el sistema (e.g., sigma, rho, beta)\n",
+    "\n",
+    "    Retorna:\n",
+    "    - t_values: arreglo de tiempos\n",
+    "    - x_values: arreglo de soluciones aproximadas en cada paso\n",
+    "    \"\"\"\n",
+    "    num_steps = int((tf - t0) / h)\n",
+    "    t_values = np.linspace(t0, tf, num_steps + 1)\n",
+    "    x_values = np.zeros((num_steps + 1, len(x0)))\n",
+    "    x_values[0] = x0\n",
+    "\n",
+    "    for i in range(num_steps):\n",
+    "        x_values[i + 1] = x_values[i] + h * f(x_values[i], *args)\n",
+    "\n",
+    "    return t_values, x_values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1aedf878-3809-4705-9368-6824102fad6c",
+   "metadata": {},
+   "source": [
+    "## 3. Implementación del Método de Runge-Kutta de Cuarto Orden (RK4)\n",
+    "\n",
+    "El **método de Runge-Kutta de cuarto orden (RK4)** es uno de los algoritmos más utilizados para la resolución numérica de ecuaciones diferenciales ordinarias debido a su buen equilibrio entre **precisión** y **eficiencia computacional**. A diferencia del método de Euler, que utiliza una única evaluación del campo vectorial $\\vec{F}$ por paso, RK4 realiza **cuatro evaluaciones por paso**, combinándolas ponderadamente para obtener una estimación más precisa del siguiente valor [4].\n",
+    "\n",
+    "Para un sistema de EDOs expresado en forma general:\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\vec{x}}{dt} = \\vec{F}(\\vec{x}, t), \\quad \\vec{x}(t_0) = \\vec{x}_0\n",
+    "$$\n",
+    "\n",
+    "el método RK4 avanza desde $\\vec{x}_n$ hasta $\\vec{x}_{n+1}$ usando las siguientes fórmulas:\n",
+    "\n",
+    "\\begin{aligned}\n",
+    "k_1 &= \\vec{F}(\\vec{x}_n, t_n) \\\\\n",
+    "k_2 &= \\vec{F}\\left(\\vec{x}_n + \\frac{h}{2}k_1,\\; t_n + \\frac{h}{2}\\right) \\\\\n",
+    "k_3 &= \\vec{F}\\left(\\vec{x}_n + \\frac{h}{2}k_2,\\; t_n + \\frac{h}{2}\\right) \\\\\n",
+    "k_4 &= \\vec{F}\\left(\\vec{x}_n + h \\cdot k_3,\\; t_n + h\\right) \\\\\n",
+    "\\vec{x}_{n+1} &= \\vec{x}_n + \\frac{h}{6}(k_1 + 2k_2 + 2k_3 + k_4)\n",
+    "\\end{aligned}\n",
+    "\n",
+    "Donde:\n",
+    "- $h$ es el tamaño del paso temporal,\n",
+    "- $k_1$, $k_2$, $k_3$, $k_4$ son **estimaciones intermedias** de la derivada.\n",
+    "\n",
+    "El método RK4 logra un **error local de orden $h^5$** y un **error global de orden $h^4$**, lo que significa que es mucho más preciso que Euler (orden 1) al mismo tamaño de paso. Esta característica lo hace especialmente adecuado para sistemas con comportamientos caóticos o sensibles, como el atractor de Lorenz.\n",
+    "\n",
+    "### Aplicación al sistema de Lorenz\n",
+    "\n",
+    "El sistema de Lorenz puede resolverse numéricamente utilizando este método, aplicando el vector de estado $\\vec{x} = [x, y, z]^\\top$ y el campo vectorial no lineal previamente definido. El uso de RK4 permite capturar con mayor fidelidad las trayectorias del sistema, evitando errores acumulados y oscilaciones artificiales producidas por métodos de menor orden.\n",
+    "\n",
+    "A continuación se implementa la versión general del método RK4 para sistemas tridimensionales como el de Lorenz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "bd2ff8c4-ad7b-4568-9801-fa778f3ccf63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def runge_kutta_4(f, x0, t0, tf, h, args=()):\n",
+    "    \"\"\"\n",
+    "    Implementación del método de Runge-Kutta de cuarto orden (RK4) para sistemas de EDOs.\n",
+    "\n",
+    "    Parámetros:\n",
+    "    - f: función que define el sistema (e.g., lorenz_system)\n",
+    "    - x0: vector de condiciones iniciales [x0, y0, z0]\n",
+    "    - t0: tiempo inicial\n",
+    "    - tf: tiempo final\n",
+    "    - h: paso de integración\n",
+    "    - args: tupla de parámetros adicionales para el sistema (e.g., sigma, rho, beta)\n",
+    "\n",
+    "    Retorna:\n",
+    "    - t_values: arreglo de tiempos\n",
+    "    - x_values: arreglo de soluciones aproximadas en cada paso\n",
+    "    \"\"\"\n",
+    "    num_steps = int((tf - t0) / h)\n",
+    "    t_values = np.linspace(t0, tf, num_steps + 1)\n",
+    "    x_values = np.zeros((num_steps + 1, len(x0)))\n",
+    "    x_values[0] = x0\n",
+    "\n",
+    "    for i in range(num_steps):\n",
+    "        t = t_values[i]\n",
+    "        x = x_values[i]\n",
+    "\n",
+    "        k1 = f(x, *args)\n",
+    "        k2 = f(x + 0.5 * h * k1, *args)\n",
+    "        k3 = f(x + 0.5 * h * k2, *args)\n",
+    "        k4 = f(x + h * k3, *args)\n",
+    "\n",
+    "        x_values[i + 1] = x + (h / 6.0) * (k1 + 2*k2 + 2*k3 + k4)\n",
+    "\n",
+    "    return t_values, x_values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44d9392f-0207-452f-af48-139f71f58aa8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
