Fix: Matrix 6 :memo:

--- a/notebooks/analisis/analisis.ipynb
+++ b/notebooks/analisis/analisis.ipynb
@@ -219,8 +219,8 @@
     "$$\n",
     "A(x,y,z) =\n",
     "\\begin{bmatrix}\n",
-    "-\\sigma & \\sigma & 0 \\\n",
-    "\\rho - z & -1 & -x \\\n",
+    "-\\sigma & \\sigma & 0 \\\\\n",
+    "\\rho - z & -1 & -x \\\\\n",
     "y & x & -\\beta\n",
     "\\end{bmatrix}\n",
     "$$\n",
@@ -287,14 +287,6 @@
     "\n",
     "Este cambio de estabilidad marca el inicio de comportamientos caóticos. Para valores altos de $( \\rho )$, el sistema desarrolla un atractor extraño, altamente sensible a las condiciones iniciales [7]."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "640eb5da-537a-41ac-aaaa-a2f5b7fda699",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
