Fix: Title 6 :hammer:

--- a/notebooks/analisis/analisis.ipynb
+++ b/notebooks/analisis/analisis.ipynb
@@ -225,7 +225,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "##### b. Análisis global\n",
+    "##### b. Análisis\n",
     "Análisis local en el origen $( p = (0,0,0) )$\n",
     "\n",
     "Los autovalores en ese punto son:\n",
